      allow sliding along walls instead of stopping on touching them:
      added a 'friction%' argument to each [Ralph]
    * Script reloading while live previewing now defaults to on; it no
      longer tries to reload unmodified scripts [Ralph]
    * "npc reference from slice", "hero rank from slice" [Ralph]
    * "slice type" [Ralph]

  * Changes

  * Bugfixes
    * Copy-paste in slice editor didn't copy slice extra data or autosort
      (also, couldn't edit the autosort sort order) [Ralph]
    * Windows only: Fixed a whole bunch of console windows popping up when
      entering Distribute Game menu, and elsewhere [Ralph]
    * "fill parent" and "set slice width/height" didn't work on Panel
      or Special slices [Ralph]
    * ${} codes in map names display correctly in the save/load screen
      [James]
    * A nonsensical item ownership number was showing up when hiring
      heroes at a shop [James]
    * Heroes killed by HP-cost in battle now correctly show their
      death frame instead of vanishing [James]
    * "add enemy to formation" was not putting enemies at the correct
      Y coordinate [James]
    * Fixed "check wall collision x/y" and "move slice with wallchecking"
      often failing to detect collision with corners of walls. Also,
      "move slice with wallchecking" now returns special values when it hit
      a corner rather than returing that it hit walls on two sides [Ralph]
    * Fix lots of g_debug.txt errors and long lags when using the Ctrl-F1
      teleport tool [Ralph]

  * Stuff Only Developers Will Notice
    * --nowait option when importing scripts from the commandline [Ralph]


September 22 2017 [Dwimmercrafty+1]

  * Bugfixes
     * Fixed a critical bug that erased On-Death-Bequest attacks and
       Non-Elemental-Counterattacks from all enemies when a game was
       loaded into custom. If you lost enemy data, and you still have
       a backup copy of your game from before August 29 2017, please